# amasingame

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/docker/postgres/: db.sql
frontend/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
